<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="activity_title">My Nanodegree Apps!</string>
    <string name="spotify_title">Spotify Streamer</string>
    <string name="scores_title">Scores App</string>
    <string name="library_title">Library App</string>
    <string name="bigger_title">Build It Bigger</string>
    <string name="xyz_title">XYZ Reader</string>
    <string name="capstone_title">Capstone: My Own App</string>
    <string name="spotify_toast">This button will launch my Spotify Streamer app!</string>
    <string name="scores_toast">This button will launch my Scores app!</string>
    <string name="library_toast">This button will launch my Library app!</string>
    <string name="bigger_toast">This button will launch my Build It Bigger app!</string>
    <string name="xyz_toast">This button will launch my XYZ Reader app!</string>
    <string name="capstone_toast">This button will launch my Capstone Project app!</string>
</resources>
