<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/title_padding"
        android:text="@string/activity_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSpotifyStreamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_title"
            style="@style/ProjectButton" />

        <Button
            android:id="@+id/buttonScoresApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_title"
            style="@style/ProjectButton" />

        <Button
            android:id="@+id/buttonLibraryApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_title"
            style="@style/ProjectButton" />

        <Button
            android:id="@+id/buttonBuildItBigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bigger_title"
            style="@style/ProjectButton" />

        <Button
            android:id="@+id/buttonXYZReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_title"
            style="@style/ProjectButton" />

        <Button
            android:id="@+id/buttonCapstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone_title"
            style="@style/CapstoneButton" />

    </LinearLayout>

</LinearLayout>
